@@ -85,6 +85,13 @@ LIBRPMIO_0
     Glob_pattern_p;
     gnameToGid;
     gzdio;
+    hashEqualityString;
+    hashFunctionString;
+    htAddEntry;
+    htCreate;
+    htFree;
+    htGetEntry;
+    htHasEntry;
     _init;
     isCompressed;
     Lchown;
