@@ -80,6 +80,7 @@
 	- rewrite macroized interpreter test to avoid %verifyscript segfault.
 	- display the verifyscript interpreter with --scripts.
 	- load/unload NEVRAO macros while creating binary sub-packages.
+	- move rmphash.[ch] into librpmio.
 
 4.4.6 -> 4.4.7:
 	- start 4.4.7 development.
